--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "bookProcessingPL"]
 	path = bookProcessingPL
 	url = https://github.com/borkowsk/bookProcessingPL.git
+	
+[submodule "anticonformistsModel"]
+        path = anticonformistsModel
+	url = https://github.com/borkowsk/Boca_anticonformists_model.git
+	
