--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.PNG
 *.svg
 *.SVG
+*.jpg
+*.JPG
 *.pdf
 *.PDF
 *.avi
@@ -19,11 +21,15 @@
 *.mp4
 *.zip
 *.ZIP
-*out
-*xls
-*xlsx
-*log
-*ppt
-*pptx
-*txt
+*.out
+*.xls
+*.xlsx
+*.log
+*.ppt
+*.pptx
+*.txt
+*.lst
 application.*
+*.bak
+._bak/
+doxDocs/
