Nowsza_wersja_check.sh_i_screen.ini

--- a/screen.ini
+++ b/screen.ini
@@ -1,12 +1,16 @@
+#!/bin/bash
 ## DISPLAY CONFIGURATION - THIS FILE IS INCLUDED IN VARIOUS  *.sh SCRIPTS
+## @date 2024-06-14 (last modifications)
 ## @author wborkowski@uw.edu.pl
 
 STR="$TERM"
-#echo "TERM:" $STR
+echo -e "Local \e[35m" screen.ini "\e[0m is checking TERM variable:" "\e[36m" $STR "\e[0m"
 
-#ENABLING COLORn ENV.VARIABLES ONLY WHEN terminal HAS COLOR POSSIBILITES: 
-SUB='color' #see also https://unix.stackexchange.com/questions/450365/check-if-terminal-supports-24-bit-true-color
+# ENABLING COLORn ENV.VARIABLES ONLY WHEN terminal HAS COLOR POSSIBILITES: 
+#(see also https://unix.stackexchange.com/questions/450365/check-if-terminal-supports-24-bit-true-color)
+export SUB='color' 
 
+# Do it only when the terminal description contains the word "color"
 if [[ "$STR" == *"$SUB"* ]]; then
 
 	export ECHO="echo -e"
@@ -14,20 +18,27 @@ if [[ "$STR" == *"$SUB"* ]]; then
 	export COLOR2="\e[35m"
 	export COLOR3="\e[34m"
 	export COLOR4="\e[33m"
+	export COLERR="\e[31m" #RED
 	export NORMCO="\e[0m"
 
-	  echo -e $COLOR1$SUB$COLOR2" is there."$NORMCO
+	echo -e ${COLOR1}${SUB}${COLOR4}" is there."$NORMCO
+
 
 	STR=`uname -or`
 	#echo "UNAME:" $STR
 	SUB='Linux'
 	
-	if [[ "$STR" == *"$SUB"* ]]; then
+	# Do it Only when the system description contains the word "Linux"
+	if [[ "$STR" == *"$SUB"* ]]; 
+	then
 
-	  echo -e $COLOR1$SUB$COLOR4" is there."$NORMCO
+	  echo -e ${COLOR1}${SUB}${COLOR4}" is there."$NORMCO
 	  
-	fi  
+	fi
+	
+else
+ 
+   echo Terminal colors unvailable?
 
 fi
-
 
