Nowy screen.ini

--- a/screen.ini
+++ b/screen.ini
@@ -1,6 +1,6 @@
 #!/bin/bash
 ## DISPLAY CONFIGURATION - THIS FILE IS INCLUDED IN VARIOUS  *.sh SCRIPTS
-## @date 2024-06-14 (last modifications)
+## @date 2024-06-15 (last modifications)
 ## @author wborkowski@uw.edu.pl
 
 STR="$TERM"
@@ -38,7 +38,9 @@ if [[ "$STR" == *"$SUB"* ]]; then
 	
 else
  
-   echo Terminal colors unvailable?
+   echo -----------------------------
+   echo  Terminal colors unvailable?
+   echo -----------------------------
 
 fi
 
